# Telegram-Shop-Bot

./: README.md  pyproject.toml  replit_zip_error_log.txt  requirements.txt  run cmd.txt
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
telegram_ecommerce/database/: db_wrapper.py
telegram_ecommerce/handlers/: register.py  search.py  show_categories.py
telegram_ecommerce/language/: __init__.py  text_en.py  text_pt.py
telegram_ecommerce/tamplates/: buttons.py  buy_callbacks.py  products.py
telegram_ecommerce/utils/: consts.py  text.py  user_credentials.json
